[REFACTOR] Tidied up the data generation code.